# detect_sleep_states

./: pyproject.toml
.ipynb_checkpoints/: eda-checkpoint.ipynb
notebooks/: classify_segment_dataset.ipynb  eda.ipynb  eda_train_meta.ipynb
scripts/notebooks/: metric.ipynb
src/detect_sleep_states/: data_module.py  dataset.py  metric.py  metrics.py  plotting.py  preprocess_data.py  runner.py  util.py
src/detect_sleep_states/classify_segment/: data_module.py  dataset.py  metrics.py  model.py
src/detect_sleep_states/models/: classify_segment.py  classify_timestep.py
tests/: test_classify_timestep.py  test_metrics.py
